alterando o caminho da imagem da tela

--- a/repo-sprint2/site/assets/css/sobre-ondo.css
+++ b/repo-sprint2/site/assets/css/sobre-ondo.css
@@ -14,7 +14,7 @@ html {
     background-color: #F0F0F0;
 }
 
-.equipe .foto-equipe {
+#sobre-nos-equipe-ondo{
     width: 100%;
     margin-bottom: 40px;
     max-width: 100%;
