--- a/repo-sprint2/site/assets/css/login.css
+++ b/repo-sprint2/site/assets/css/login.css
@@ -2,160 +2,144 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html, body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #ffffff;
-    height: 100%; 
-    width: 100%; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
-}
 
-body {
-    padding: 0;
 }
 
 .wrapper {
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    width: 100%; 
     height: 100vh;
 }
 
 .container {
-    background-color: #294722;
-    color: #ffffff;
-    width: 40%; 
-    height: 100%;
-    padding: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    text-align: center;
     display: flex;
+    height: 100%;
+    width: 100%;    
+}
+
+.login {
+    display: flex;
+    width: 30%;
+    padding: 0 60px;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    gap: 20px;
+    background-color: #48733E;
 }
 
-h2 {
-    font-size: 18px;
-    margin-bottom: 30px;
-    font-weight: bold;
-}
-
-button {
-    width: 70%;
-    padding: 15px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-bottom: 15px;
-    background-color: transparent;
-    border: 2px solid #ffffff;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-button img {
+.img_btn_voltar {
+    height: 36px;
     width: 20px;
 }
 
-button:hover {
-    background-color: #ffffff;
-    color: #50984E;
+.txt_login{
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
 
-.or-divider {
+.img_btn {
+    height: 25px;
+    width: 31px;
+}
+
+.btn_login{
     display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    margin: 10px 0;
+    gap: 10px;
+    height: 40px;
+    padding: 25px;
+    border-radius: 8px;
+    border: 1px solid white;
+    margin-bottom: 26px;
+}
+
+.image-wasabi {
     width: 70%;
+    background-image: url('../img/img_login.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.or-text{
+    color: white;
+}
+.or-divider{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+margin-bottom: 25px;
 }
 
 .or-divider hr {
     flex: 1;
-    border-top: 1px solid #9fa2a7;
-    height: 1px;
-    margin: 0;
-}
-
-.or-divider span {
+    /* Faz com que os <hr> cresçam para os lados igualmente */
+    border: none;
+    /* Remove a borda padrão do <hr> */
+    border-top: 1.5px solid #A0BB9C;
+    /* Adiciona uma linha fina e define a cor */
     margin: 0 10px;
-    color: #9fa2a7;
+    /* Espaçamento entre o texto e as linhas */
 }
 
-.input-container {
-    display: flex;
-    align-items: center;
-}
-
-.input-container i {
-    color: #0A1F15;
-    margin-right: 10px;
-}
-
-input {
-    width: calc(100% - 40px);
-    padding: 10px;
-    margin: 10px 0;
-    border: 2px solid #ffffff;
-    font-size: 16px;
-    box-sizing: border-box;
-    background-color: transparent;
-    color: #ffffff;
-    text-align: center;
-}
-
-input::placeholder {
-    color: #9fa2a7;
-}
-
-a {
-    color: #ffffff;
-    font-size: 14px;
-    display: block;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
-    color: #ffffff;
-}
-
-button.login {
-    background-color: #192B16;
-    border: 2px solid #ffffff;
-    color: #ffffff;
-    font-size: 16px;
-    text-transform: uppercase;
-    width: 70%;
-    padding: 15px;
-}
-
-button.login:hover {
-    background-color: #ffffff;
-    color: #203920;
-}
-
-.image-container {
-    width: 60%;
+.ipt-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+    background-color: white;
+    border-radius: 8px;
+    height: 26px;
+    padding: 25px;
+    margin-bottom: 25px;
 }
 
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.ipt-container img{
+    width: 15px;
+    height: 15px;
+}
+
+.ipt-container input{
+    border: none;
+    max-width: max-content;
+    max-height: max-content;
+    color: black;
+}
+
+.texSenha{
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+    margin: 0 auto;
+    
+}
+.texSpan{
+    color: #50984E;
+}
+
+.container-btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 46px;
+}
+.btn_entrar{
+    color: #50984E;
+    border-radius: 8px;
+    border: none;
+    font-size: 1rem;
+    font-weight: 900;
+    padding: 15px 80px;
+}
+
+.img_logo_ondo{
+    background-image: url('../img/logo_ondo_login.png');
+    height: 70px;
+    width: 105px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    align-self: center;
+    margin-top: 10px;
 }
