--- a/repo-sprint2/site/assets/css/login.css
+++ b/repo-sprint2/site/assets/css/login.css
@@ -3,17 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-
-}
-
-.wrapper {
-    height: 100vh;
 }
 
 .container {
     display: flex;
     width: 100%;   
-    height: 100%;
+    height: 100vh;
 }
 
 .login {
@@ -23,19 +18,23 @@
     flex-direction: column;
     justify-content: center;
     background-color: #48733E;
+    gap: 30px;
 }
 
 .img_btn_voltar {
     height: 36px;
     width: 20px;
-    margin-top: 20px;
 }
 
 .txt_login{
     color: white;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
+}
+
+.container_input{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .img_btn {
@@ -54,10 +53,8 @@
     align-items: center;
     gap: 10px;
     height: 40px;
-    padding: 25px;
     border-radius: 8px;
     border: 1px solid white;
-    margin-bottom: 26px;
 }
 
 .image-wasabi {
@@ -80,28 +77,6 @@
     padding: 5px;
 }
 
-.or-text{
-    color: white;
-}
-.or-divider{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-margin-bottom: 25px;
-}
-
-.or-divider hr {
-    flex: 1;
-    /* Faz com que os <hr> cresçam para os lados igualmente */
-    border: none;
-    /* Remove a borda padrão do <hr> */
-    border-top: 1.5px solid #A0BB9C;
-    /* Adiciona uma linha fina e define a cor */
-    margin: 0 10px;
-    /* Espaçamento entre o texto e as linhas */
-}
-
 input{
     font-size: 1.2rem;
 }
@@ -119,7 +94,6 @@ input:focus {
     border-radius: 8px;
     height: 26px;
     padding: 25px;
-    margin-bottom: 25px;
 }
 
 .ipt-container img{
@@ -139,16 +113,17 @@ input:focus {
     text-decoration: none;
     color: white;
     margin: 0 auto;
-    
 }
 .texSpan{
-    color: #50984E;
+    color: #042F13;
 }
 
 .container-btn{
     display: flex;
     justify-content: center;
-    margin-top: 46px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 .btn_entrar{
     color: #50984E;
@@ -165,13 +140,16 @@ input:focus {
     background-color: #50984E;
 }
 
+.texCadastro{
+    color: white;
+}
+
 .img_logo_ondo{
     background-image: url('../img/logo_ondo_login.png');
-    height: 70px;
-    width: 105px;
+    height: 100px;
+    width: 200px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     align-self: center;
-    margin-top: 10px;
 }
