--- a/repo-sprint2/site/assets/css/calculadora.css
+++ b/repo-sprint2/site/assets/css/calculadora.css
@@ -16,10 +16,10 @@ body {
 
 h1 {
     /*TAG H1 (titulo), será verde e alinhada*/
-    padding-top: 20px;
+    padding-top: 10px;
     color: #50984E;
     text-align: center;
-    margin-top: 55px;
+    margin-top: 25px;
 }
 
 .div_conteudo {
@@ -44,7 +44,7 @@ h1 {
     background-color: #ECECEC;
     width: 50%;
     height: fit-content;
-    padding: 30px 40px;
+    padding: 0px 40px 30px;
     box-shadow: 0px 0px 10px #00000041;
     border-radius: 8px;
     margin: 20px 20px 0px 40px;
