--- a/repo-sprint2/site/assets/css/footer.css
+++ b/repo-sprint2/site/assets/css/footer.css
@@ -1,15 +1,9 @@
 .footer {
-
-    width: 100%;
-
-    height: 183px;
-
     background-color: #1E2F1A;
 
     position: relative;
 
     margin-top: 20px;
-
 }
 
 
@@ -48,11 +42,13 @@
 
 }
 
-
-
 .inf_center_footer,
 .inf_right_footer {
 
     color: white;
 
+}
+
+.logo_ondo img{
+    width: 100px;
 }
