--- a/repo-sprint2/site/assets/css/login.css
+++ b/repo-sprint2/site/assets/css/login.css
@@ -37,6 +37,11 @@
     gap: 20px;
 }
 
+.container_erro{
+    color: white;
+    font-weight: bold;
+}
+
 .img_btn {
     height: 25px;
     width: 31px;
