--- a/repo-sprint2/site/assets/css/footer.css
+++ b/repo-sprint2/site/assets/css/footer.css
@@ -38,17 +38,18 @@
 
     align-items: center;
 
-    padding-top: 25px;
+    padding: 45px 0 20px;
 
 }
 
 .inf_center_footer,
 .inf_right_footer {
-
+    font-size: 16px;
     color: white;
 
 }
 
-.logo_ondo img{
-    width: 100px;
+.logo_ondo img {
+    width: 150px;
+    height: 75;
 }
