--- a/repo-sprint2/site/Dashboard/graficos.css
+++ b/repo-sprint2/site/Dashboard/graficos.css
@@ -34,12 +34,12 @@
     width: 46%;
 }
 
-
 .grafico_cards .grafico {
     width: 100%;
     height: 100%;
     background-color: white;
     border-radius: 10px;
+    flex-direction: column;
 }
 .notificacoes_recentes{
     width: 94%;
@@ -49,4 +49,19 @@
     background-color: white;
     border-radius: 10px;
     height: 100px;
+}
+
+#grafico_pizza {
+    width: 250px !important;
+    height: 250px !important;
+    padding: 20px;
+}
+#grafico_linha{
+    height: 100% !important;
+}
+
+.grafico h3{
+    color: #666666;
+    font: 700;
+    text-align: center;
 }
