--- a/repo-sprint2/site/Dashboard/graficos.css
+++ b/repo-sprint2/site/Dashboard/graficos.css
@@ -1,19 +1,19 @@
-.grafico_dashboard{
-        width: 80%;
-        gap: 20px;
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 25px;
+.grafico_dashboard {
+    width: 80%;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 25px;
 }
 
-.grafico_dashboard .content{
+.grafico_dashboard .content {
     display: flex;
     gap: 20px;
     justify-content: center;
     flex-wrap: wrap;
 }
 
-.grafico_dashboard .content .kpi_cards{
+.grafico_dashboard .content .kpi_cards {
     display: flex;
 }
 
@@ -24,12 +24,18 @@
     border-radius: 10px;
 }
 
-.grafico_dashboard .content .estufa_cards, .grafico_dashboard .content .kpi_cards{
+.grafico_dashboard .content .estufa_cards,
+.grafico_dashboard .content .kpi_cards {
     width: 46%;
     display: flex;
     gap: 5px;
     flex-wrap: wrap;
 }
+
+.grafico_container {
+    width: 100%;
+}
+
 .grafico_cards {
     width: 46%;
 }
@@ -41,7 +47,8 @@
     border-radius: 10px;
     flex-direction: column;
 }
-.notificacoes_recentes{
+
+.notificacoes_recentes {
     width: 94%;
 }
 
@@ -52,16 +59,68 @@
 }
 
 #grafico_pizza {
-    width: 250px !important;
-    height: 250px !important;
+    width: 45% !important;
+    height: 45% !important;
     padding: 20px;
 }
-#grafico_linha{
-    height: 100% !important;
+canvas#grafico_barra {
+    /* height: 100% !important; */
+    padding:  0 20px;
+    width: 100% !important;
 }
 
-.grafico h3{
+#grafico_linha {
+    height: 100% !important;
+    padding: 0 20px;
+}
+
+.grafico h3 {
     color: #666666;
-    font: 700;
+    font-weight: bold;
+    font-size: 20px;
     text-align: center;
+    padding-top: 10px;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+}
+
+.legenda{
+    width: 55%;
+}
+
+/* Estilos para a legenda */
+.custom-legend {
+    display: flex;
+    flex-direction: column;
+    /* Coluna para cada item da legenda */
+    align-items: flex-start;
+    /* Alinhamento à esquerda */
+    margin-left: 20px;
+    /* Margem para afastar da esquerda */
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    /* Centralizar verticalmente */
+    margin-bottom: 5px;
+    /* Espaçamento entre itens */
+    
+    font-size: 14px;
+}
+
+.legend-box {
+    width: 35px;
+    /* Tamanho da caixa da legenda */
+    height: 12px;
+    /* Altura da caixa da legenda */
+    margin-right: 10px;
+    /* Espaçamento entre a caixa e o texto */
+    font-size: 14px;
+}
+
+.grafico .container {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
 }
