alterando os textos das validações da tela de cadastro e mudando a posição do botão

--- a/repo-sprint2/site/assets/css/cadastro.css
+++ b/repo-sprint2/site/assets/css/cadastro.css
@@ -115,8 +115,9 @@ body, html {
 .img_btn_voltar {
     position: absolute;
     top: 20px;
-    left: 20px;
-    width: 40px;
+    left: 1860px;
+    height: 37px;
+    width: 21px;
     cursor: pointer;
 }
 
