--- a/repo-sprint2/site/Dashboard/dashboard.css
+++ b/repo-sprint2/site/Dashboard/dashboard.css
@@ -50,18 +50,20 @@
     height: 200px;
 }
 
-
-.card .kpi_titulo{
+.kpi_cards .card .kpi_titulo{
     font-size: 16px;
     padding: 15px;
     display: flex;
     font-weight: 600;
+    height: 39px;
     color: #1E2F1A;
-    justify-content: space-between;
+    justify-content: space-around;
+    width: 100%;
+    align-items: center;
 }
 
-.card .kpi_titulo span{
-    width: 80%;
+.kpi_cards .card .kpi_titulo span{
+    width: 50%;
 }
 
 .card .kpi_dado{
@@ -69,6 +71,49 @@
 }
 
 
+.kpi_titulo img{
+    width: 25px;
+    height: 25px;
+}
+
 .img_sino{
     width: 22px;
+}
+
+.estufa_cards .card{
+    display: flex;
+    justify-content: center;
+}
+
+.estufa_cards .card .kpi_titulo{
+    font-size: 16px;
+    padding: 35px 0;
+    gap: 20px;
+    display: flex;
+    font-weight: 600;
+    color: #1E2F1A;
+    width: 60%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.estufa_icone{
+    display: flex;
+    padding: 30px 0;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.estufa_icone .termometro{
+    width: 15px;
+}
+
+.danger {
+    border: solid 2px #C35454;
+}
+
+.check {
+    border: solid 2px #57C354;
 }
