ajustes no tamanho da fonte e links

--- a/repo-sprint2/site/assets/css/login.css
+++ b/repo-sprint2/site/assets/css/login.css
@@ -112,6 +112,7 @@ input:focus {
     font-weight: 900;
     padding: 15px 80px;
     transition: background-color 0.4s, transform 0.5s;
+    cursor: pointer;
 }
 
 .btn_entrar:hover {
