--- a/repo-sprint2/site/assets/css/cadastro.css
+++ b/repo-sprint2/site/assets/css/cadastro.css
@@ -36,6 +36,7 @@ body, html {
     flex-direction: column;
     align-items: center;
     display: flex;
+    justify-content: center;
 }
 
 .form_cointainer_empresa, .form_container_endereco {
