--- a/repo-sprint3/site/web-data-viz-main/public/css/login.css
+++ b/repo-sprint3/site/web-data-viz-main/public/css/login.css
@@ -5,9 +5,35 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
+.loading-div {
+    width: 50px;
+    margin: auto;
+    display: none;
+}
+
+.loading-div img {
+    height: 50px;
+    width: 50px;
+}
+
+.loading-div {
+    width: 50px;
+    margin: auto;
+    display: none;
+    position: absolute;
+    top: 500px;
+    left: 174px;
+}
+
+.loading-div img {
+  height: 50px;
+  width: 50px;
+}
+  
 .container {
     display: flex;
-    width: 100%;   
+    width: 100%;
     height: 100vh;
 }
 
@@ -26,18 +52,18 @@
     width: 20px;
 }
 
-.txt_login{
+.txt_login {
     color: white;
     text-align: center;
 }
 
-.container_input{
+.container_input {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.container_erro{
+.container_erro {
     color: white;
     text-decoration: underline;
 }
@@ -55,7 +81,7 @@
     background-repeat: no-repeat;
 }
 
-input{
+input {
     font-size: 0.8rem;
 }
 
@@ -63,7 +89,7 @@ input:focus {
     outline: none;
 }
 
-.ipt-container{
+.ipt-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,37 +100,39 @@ input:focus {
     padding: 20px;
 }
 
-.ipt-container img{
+.ipt-container img {
     width: 15px;
     height: 15px;
 }
 
-.ipt-container input{
+.ipt-container input {
     border: none;
     max-width: max-content;
     max-height: max-content;
     color: black;
 }
 
-.texSenha{
+.texSenha {
     font-weight: bold;
     text-decoration: none;
     font-size: 0.9rem;
     color: white;
     margin: 0 auto;
 }
-.texSpan{
+
+.texSpan {
     color: #042F13;
 }
 
-.container-btn{
+.container-btn {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     gap: 10px;
 }
-.btn_entrar{
+
+.btn_entrar {
     color: #50984E;
     border-radius: 8px;
     border: none;
@@ -120,12 +148,12 @@ input:focus {
     background-color: #50984E;
 }
 
-.texCadastro{
+.texCadastro {
     color: white;
     font-size: 0.8rem;
 }
 
-.img_logo_ondo{
+.img_logo_ondo {
     background-image: url('../img/logo_ondo_login.png');
     height: 100px;
     width: 200px;
