ajustes para a dashboard

--- a/repo-sprint3/site/web-data-viz-main/public/css/login.css
+++ b/repo-sprint3/site/web-data-viz-main/public/css/login.css
@@ -154,7 +154,7 @@ input:focus {
 }
 
 .img_logo_ondo {
-    background-image: url('../img/logo_ondo_login.png');
+    background-image: url('../assets/img/logo_ondo_login.png');
     height: 100px;
     width: 200px;
     background-size: cover;
