--- a/repo-sprint3/site/ondo/public/dashboard/parametros.css
+++ b/repo-sprint3/site/ondo/public/dashboard/parametros.css
@@ -10,11 +10,12 @@
 .parametros-alerta{
     display: flex;
     background: rgb(92,107,192);
-    background: linear-gradient(90deg, rgba(92, 107, 192, 1) 6%, rgba(66, 165, 245, 1) 16%, rgba(21, 175, 21, 1) 36%, rgba(21, 175, 21, 1) 60%, rgba(243, 247, 57, 1) 82%, rgba(208, 88, 53, 1) 96%);
+    background: linear-gradient(90deg, rgba(92, 107, 192, 1) 6%, rgba(66, 165, 245, 1) 16%, rgba(21, 175, 21, 1) 36%, rgba(21, 175, 21, 1) 60%, rgb(190 193 45) 82%, rgba(208, 88, 53, 1) 96%);
     justify-content: space-between;
     padding: 0 20px;
     font-weight: 600;
     border-radius: 12px;
+    color: white;
 }
 
 .item-regua.ideal{
