--- a/repo-sprint3/site/ondo/public/dashboard/dashboard.css
+++ b/repo-sprint3/site/ondo/public/dashboard/dashboard.css
@@ -70,6 +70,26 @@
     color: #1E2F1A;
 }
 
+.kpi_dado label{
+    font-size: 16px;
+}
+
+.container-kpi_estufas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+dialog#dialog_modal {
+    width: 65%;
+    height: 65%;
+}
+
+.container_modal {
+    width: 100%;
+    height: 100%;
+}
+
 
 .kpi_titulo img{
     width: 25px;
@@ -116,4 +136,19 @@
 
 .check {
     border: solid 2px #57C354;
+}
+
+.adicionar_estufa{
+    background-color: transparent !important;
+    border: solid 4px #1e2f1a;
+    width: 29.5%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.adicionar_estufa img{
+    width: 30px;
+
 }
