--- a/repo-sprint3/site/ondo/public/dashboard/graficos.css
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.css
@@ -92,7 +92,7 @@ canvas#grafico_barra {
 
 #grafico_linha {
     height: 100% !important;
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
 
 .grafico h3 {
