--- a/repo-sprint3/site/ondo/public/css/login.css
+++ b/repo-sprint3/site/ondo/public/css/login.css
@@ -5,7 +5,22 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
+.card_erro {
+    display: none;
+    background-color: #fff;
+    color: black;
+    width: 230px;
+    position: fixed;
+    border-radius: 4px;
+    border: #ED145B 3px solid;
+    padding: 10px;
+    margin-right: 10%;
+  }
+  
+  .card_erro #mensagem_erro{
+    font-weight: 500;
+    font-size: 20px;
+  }
 .loading-div {
     width: 50px;
     margin: auto;
