--- a/repo-sprint3/site/ondo/public/dashboard/dashboard.css
+++ b/repo-sprint3/site/ondo/public/dashboard/dashboard.css
@@ -97,10 +97,10 @@ dialog#dialog_modal {
 }
 .espaco_cadastrar{
     width: 90%;
+    height: 100%;
     background-color: #f7f9fc;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -113,7 +113,8 @@ dialog#dialog_modal {
 }
 
 .ipt-container input {
-    width: calc(100% - 40px);
+    width: 60%;
+    height: 80%;
     padding: 12px 15px 12px 40px;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -271,6 +272,7 @@ dialog#dialog_modal {
 }
 
 .botao_btn_entrar {
+    margin-top: 20px;
     width: 100%;
     padding: 12px 20px;
     background: #4CAF50;
@@ -313,8 +315,6 @@ dialog#dialog_modal {
     padding: 20px;
     border: none;
     border-radius: 10px;
-    background: linear-gradient(145deg, #ffffff, #e6e6e6);
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25); 
     align-self: center;
 }
 
