fix: removendo linhas do garfico e adicionando borda verde

--- a/repo-sprint3/site/ondo/public/dashboard/dashboard.css
+++ b/repo-sprint3/site/ondo/public/dashboard/dashboard.css
@@ -196,7 +196,7 @@ dialog#dialog_modal {
 }
 
 .check {
-    border: solid 2px #57C354;
+    border: solid 2px #57C354 !important;
 }
 
 .adicionar_estufa{
